优化默认 JVM 参数 (#3824)